--- a/PreferenceLearning.ipynb
+++ b/PreferenceLearning.ipynb
@@ -9315,9 +9315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 207,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -9339,12 +9339,12 @@
     "for i in range(24):\n",
     "    ax = fig_all.add_subplot(8, 3, i + 1)\n",
     "    if i <= 9:\n",
-    "        ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_tou1h.Average[df_Ntou1h.GMT.str.contains('0' + str(i) + ':00:00')],  c = 'brown' )\n",
+    "        ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_tou1h.Average[df_tou1h.GMT.str.contains('0' + str(i) + ':00:00')],  c = 'brown' )\n",
     "        ax.set_title('Time: 0' + str(i) + ':00 (TOU)')\n",
     "        ax.set_xlabel(r'Temperature (C$^o$)')\n",
     "        ax.set_ylabel('Average Consumption (kWh)')\n",
     "    else:\n",
-    "        ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_tou1h.Average[df_Ntou1h.GMT.str.contains(str(i) + ':00:00')], c = 'brown' )\n",
+    "        ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_tou1h.Average[df_tou1h.GMT.str.contains(str(i) + ':00:00')], c = 'brown' )\n",
     "        ax.set_title('Time: ' + str(i) + ':00 (TOU)')\n",
     "        ax.set_xlabel(r'Temperature (C$^o$)')\n",
     "        ax.set_ylabel('Average Consumption (kWh)')\n",
@@ -9360,10 +9360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 236,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9381,31 +9379,108 @@
    "source": [
     "# non-TOU vs TOU in terms of showing the elements in Average column such that they are hourly energy consumption v.s. temperature over 365 days\n",
     "fig_all = plt.figure(figsize = (12,90))\n",
+    "ax_Ntou = [] # store subplot objects\n",
+    "ax_tou = [] # store subplot objects\n",
     "for i in range(24):\n",
-    "    ax = fig_all.add_subplot(24, 2, 2 * i + 1)\n",
+    "    ax_Ntou.append(fig_all.add_subplot(24, 2, 2 * i + 1))\n",
     "    if i <= 9:\n",
-    "        ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_Ntou1h.Average[df_Ntou1h.GMT.str.contains('0' + str(i) + ':00:00')] )\n",
-    "        ax.set_title('Time: 0' + str(i) + ':00 (non-TOU)')\n",
-    "        ax.set_xlabel(r'Temperature (C$^o$)')\n",
-    "        ax.set_ylabel('Average Consumption (kWh)')\n",
+    "        ax_Ntou[-1].scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_Ntou1h.Average[df_Ntou1h.GMT.str.contains('0' + str(i) + ':00:00')] )\n",
+    "        ax_Ntou[-1].set_title('Time: 0' + str(i) + ':00 (non-TOU)')\n",
+    "        ax_Ntou[-1].set_xlabel(r'Temperature (C$^o$)')\n",
+    "        ax_Ntou[-1].set_ylabel('Average Consumption (kWh)')\n",
     "    else:\n",
-    "        ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_Ntou1h.Average[df_Ntou1h.GMT.str.contains(str(i) + ':00:00')] )\n",
-    "        ax.set_title('Time: ' + str(i) + ':00 (non-TOU)')\n",
-    "        ax.set_xlabel(r'Temperature (C$^o$)')\n",
-    "        ax.set_ylabel('Average Consumption (kWh)')\n",
+    "        ax_Ntou[-1].scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_Ntou1h.Average[df_Ntou1h.GMT.str.contains(str(i) + ':00:00')] )\n",
+    "        ax_Ntou[-1].set_title('Time: ' + str(i) + ':00 (non-TOU)')\n",
+    "        ax_Ntou[-1].set_xlabel(r'Temperature (C$^o$)')\n",
+    "        ax_Ntou[-1].set_ylabel('Average Consumption (kWh)')\n",
     "for i in range(24):\n",
-    "    ax = fig_all.add_subplot(24, 2, 2 * i + 2)\n",
+    "    ax_tou.append(fig_all.add_subplot(24, 2, 2 * i + 2))\n",
     "    if i <= 9:\n",
-    "        ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_tou1h.Average[df_Ntou1h.GMT.str.contains('0' + str(i) + ':00:00')],  c = 'brown' )\n",
-    "        ax.set_title('Time: 0' + str(i) + ':00 (TOU)')\n",
-    "        ax.set_xlabel(r'Temperature (C$^o$)')\n",
-    "        ax.set_ylabel('Average Consumption (kWh)')\n",
+    "        ax_tou[-1].scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_tou1h.Average[df_tou1h.GMT.str.contains('0' + str(i) + ':00:00')],  c = 'brown' )\n",
+    "        ax_tou[-1].set_title('Time: 0' + str(i) + ':00 (TOU)')\n",
+    "        ax_tou[-1].set_xlabel(r'Temperature (C$^o$)')\n",
+    "        ax_tou[-1].set_ylabel('Average Consumption (kWh)')\n",
     "    else:\n",
-    "        ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_tou1h.Average[df_Ntou1h.GMT.str.contains(str(i) + ':00:00')], c = 'brown' )\n",
-    "        ax.set_title('Time: ' + str(i) + ':00 (TOU)')\n",
-    "        ax.set_xlabel(r'Temperature (C$^o$)')\n",
-    "        ax.set_ylabel('Average Consumption (kWh)')\n",
+    "        ax_tou[-1].scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_tou1h.Average[df_tou1h.GMT.str.contains(str(i) + ':00:00')], c = 'brown' )\n",
+    "        ax_tou[-1].set_title('Time: ' + str(i) + ':00 (TOU)')\n",
+    "        ax_tou[-1].set_xlabel(r'Temperature (C$^o$)')\n",
+    "        ax_tou[-1].set_ylabel('Average Consumption (kWh)')\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Baisc one without creating axes lists, used for future reference.\n",
+    "# for i in range(24):\n",
+    "#     ax = fig_all.add_subplot(24, 2, 2 * i + 1)\n",
+    "#     if i <= 9:\n",
+    "#         ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_Ntou1h.Average[df_Ntou1h.GMT.str.contains('0' + str(i) + ':00:00')] )\n",
+    "#         ax.set_title('Time: 0' + str(i) + ':00 (non-TOU)')\n",
+    "#         ax.set_xlabel(r'Temperature (C$^o$)')\n",
+    "#         ax.set_ylabel('Average Consumption (kWh)')\n",
+    "#     else:\n",
+    "#         ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_Ntou1h.Average[df_Ntou1h.GMT.str.contains(str(i) + ':00:00')] )\n",
+    "#         ax.set_title('Time: ' + str(i) + ':00 (non-TOU)')\n",
+    "#         ax.set_xlabel(r'Temperature (C$^o$)')\n",
+    "#         ax.set_ylabel('Average Consumption (kWh)')\n",
+    "# for i in range(24):\n",
+    "#     ax = fig_all.add_subplot(24, 2, 2 * i + 2)\n",
+    "#     if i <= 9:\n",
+    "#         ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_tou1h.Average[df_tou1h.GMT.str.contains('0' + str(i) + ':00:00')],  c = 'brown' )\n",
+    "#         ax.set_title('Time: 0' + str(i) + ':00 (TOU)')\n",
+    "#         ax.set_xlabel(r'Temperature (C$^o$)')\n",
+    "#         ax.set_ylabel('Average Consumption (kWh)')\n",
+    "#     else:\n",
+    "#         ax.scatter(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_tou1h.Average[df_tou1h.GMT.str.contains(str(i) + ':00:00')], c = 'brown' )\n",
+    "#         ax.set_title('Time: ' + str(i) + ':00 (TOU)')\n",
+    "#         ax.set_xlabel(r'Temperature (C$^o$)')\n",
+    "#         ax.set_ylabel('Average Consumption (kWh)')\n",
+    "# plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The correlation of average consumption and temperature is given below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.7509352843803221, -0.7426812233241374, -0.7492746033261536, -0.7684770585589682, -0.8051962925564745, -0.6862571385329993, -0.3266375976337321, -0.6071733097206198, -0.8560651449319753, -0.8962612196170212, -0.8473378749845665, -0.791686640045744, -0.7681064441137024, -0.7833424711409305, -0.7840735080645013, -0.7839644295698818, -0.8461538653414484, -0.886838020743355, -0.8998771011398048, -0.896384497591587, -0.888443182347975, -0.8717126970864144, -0.8384429265173634, -0.790355206434586] [-0.7195107284763026, -0.7085290171875657, -0.7019117103049698, -0.7333971495319896, -0.7792612251437584, -0.6188879469349222, -0.2363811049862666, -0.586978656863953, -0.8427535541656467, -0.8638588279068014, -0.8139870614116164, -0.7610993438058472, -0.7443988140876796, -0.7619599491776597, -0.7594827297683924, -0.7674003196138267, -0.8287910136158755, -0.8600326581015008, -0.8661916887840679, -0.8683411647131036, -0.8600802407091849, -0.8397968525808615, -0.817095657245761, -0.7708890104260101]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's first add correlation of average consumption and temperature on each plot\n",
+    "corr_nTou = []\n",
+    "corr_Tou = []\n",
+    "for i in range(24):\n",
+    "    if i <= 9:\n",
+    "        corr_nTou.append(np.corrcoef(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_Ntou1h.Average[df_Ntou1h.GMT.str.contains('0' + str(i) + ':00:00')])[0][1])\n",
+    "        corr_Tou.append(np.corrcoef(df_wea1h.TempC[df_wea1h.GMT.str.contains('0' + str(i) + ':00:00')], df_tou1h.Average[df_tou1h.GMT.str.contains('0' + str(i) + ':00:00')])[0][1])\n",
+    "    else:\n",
+    "        corr_nTou.append(np.corrcoef(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_Ntou1h.Average[df_Ntou1h.GMT.str.contains(str(i) + ':00:00')])[0][1])\n",
+    "        corr_Tou.append(np.corrcoef(df_wea1h.TempC[df_wea1h.GMT.str.contains(str(i) + ':00:00')], df_tou1h.Average[df_tou1h.GMT.str.contains(str(i) + ':00:00')])[0][1])\n",
+    "print(corr_nTou, corr_Tou)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add linear regression and polynomial regression, and see which result a less MSE."
    ]
   },
   {
