--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,88 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Overview of the four seasons in the plot\n",
-    "import seaborn as sns\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "# non-TOU vs TOU in terms of showing the elements in Average column such that they are hourly energy consumption v.s. temperature over 365 days\n",
-    "fig_all = plt.figure(figsize = (12,90))\n",
-    "ax_Ntou = [] # store subplot objects\n",
-    "ax_tou = [] # store subplot objects\n",
-    "lm = LinearRegression()\n",
-    "for i in range(24):\n",
-    "    ax_Ntou.append(fig_all.add_subplot(24, 2, 2 * i + 1))\n",
-    "    if i <= 9:\n",
-    "        x = df_wea1h_spring.TempC[df_wea1h_spring.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        y = df_Ntou1h_spring.Average[df_Ntou1h_spring.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        ax_Ntou[-1].scatter(x, y, label = 'Spring', alpha = 0.8)\n",
-    "        x = df_wea1h_summer.TempC[df_wea1h_summer.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        y = df_Ntou1h_summer.Average[df_Ntou1h_summer.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        ax_Ntou[-1].scatter(x, y, label = 'Summer', alpha = 0.8)\n",
-    "        x = df_wea1h_autumn.TempC[df_wea1h_autumn.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        y = df_Ntou1h_autumn.Average[df_Ntou1h_autumn.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        ax_Ntou[-1].scatter(x, y, label = 'Autumn', alpha = 0.8)\n",
-    "        x = df_wea1h_winter.TempC[df_wea1h_winter.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        y = df_Ntou1h_winter.Average[df_Ntou1h_winter.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        ax_Ntou[-1].scatter(x, y, label = 'Winter', alpha = 0.8)\n",
-    "        ax_Ntou[-1].set_title('Time: 0' + str(i) + ':00 (non-TOU)')\n",
-    "        ax_Ntou[-1].set_xlabel(r'Temperature (C$^o$)')\n",
-    "        ax_Ntou[-1].set_ylabel('Average Consumption (kWh)')\n",
-    "        ax_Ntou[-1].legend()\n",
-    "    else:\n",
-    "        x = df_wea1h_spring.TempC[df_wea1h_spring.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        y = df_Ntou1h_spring.Average[df_Ntou1h_spring.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        ax_Ntou[-1].scatter(x, y, label = 'Spring', alpha = 0.8)\n",
-    "        x = df_wea1h_summer.TempC[df_wea1h_summer.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        y = df_Ntou1h_summer.Average[df_Ntou1h_summer.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        ax_Ntou[-1].scatter(x, y, label = 'Summer', alpha = 0.8)\n",
-    "        x = df_wea1h_autumn.TempC[df_wea1h_autumn.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        y = df_Ntou1h_autumn.Average[df_Ntou1h_autumn.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        ax_Ntou[-1].scatter(x, y, label = 'Autumn', alpha = 0.8)\n",
-    "        x = df_wea1h_winter.TempC[df_wea1h_winter.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        y = df_Ntou1h_winter.Average[df_Ntou1h_winter.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        ax_Ntou[-1].scatter(x, y, label = 'Winter', alpha = 0.8)\n",
-    "        ax_Ntou[-1].set_title('Time: ' + str(i) + ':00 (non-TOU)')\n",
-    "        ax_Ntou[-1].set_xlabel(r'Temperature (C$^o$)')\n",
-    "        ax_Ntou[-1].set_ylabel('Average Consumption (kWh)')\n",
-    "        ax_Ntou[-1].legend()\n",
-    "for i in range(24):\n",
-    "    ax_tou.append(fig_all.add_subplot(24, 2, 2 * i + 2))\n",
-    "    if i <= 9:\n",
-    "        x = df_wea1h_spring.TempC[df_wea1h_spring.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        y = df_tou1h_spring.Average[df_tou1h_spring.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        ax_tou[-1].scatter(x, y, label = 'Spring', alpha = 0.8)\n",
-    "        x = df_wea1h_summer.TempC[df_wea1h_summer.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        y = df_tou1h_summer.Average[df_tou1h_summer.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        ax_tou[-1].scatter(x, y, label = 'Summer', alpha = 0.8)\n",
-    "        x = df_wea1h_autumn.TempC[df_wea1h_autumn.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        y = df_tou1h_autumn.Average[df_tou1h_autumn.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        ax_tou[-1].scatter(x, y, label = 'Autumn', alpha = 0.8)\n",
-    "        x = df_wea1h_winter.TempC[df_wea1h_winter.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        y = df_tou1h_winter.Average[df_tou1h_winter.GMT.str.contains('0' + str(i) + ':00:00')].values\n",
-    "        ax_tou[-1].scatter(x, y, label = 'Winter', alpha = 0.8)\n",
-    "        ax_tou[-1].set_title('Time: 0' + str(i) + ':00 (TOU)')\n",
-    "        ax_tou[-1].set_xlabel(r'Temperature (C$^o$)')\n",
-    "        ax_tou[-1].set_ylabel('Average Consumption (kWh)')\n",
-    "        ax_tou[-1].legend()\n",
-    "    else:\n",
-    "        x = df_wea1h_spring.TempC[df_wea1h_spring.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        y = df_tou1h_spring.Average[df_tou1h_spring.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        ax_tou[-1].scatter(x, y, label = 'Spring')\n",
-    "        x = df_wea1h_summer.TempC[df_wea1h_summer.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        y = df_tou1h_summer.Average[df_tou1h_summer.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        ax_tou[-1].scatter(x, y, label = 'Summer')\n",
-    "        x = df_wea1h_autumn.TempC[df_wea1h_autumn.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        y = df_tou1h_autumn.Average[df_tou1h_autumn.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        ax_tou[-1].scatter(x, y, label = 'Autumn')\n",
-    "        x = df_wea1h_winter.TempC[df_wea1h_winter.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        y = df_tou1h_winter.Average[df_tou1h_winter.GMT.str.contains(str(i) + ':00:00')].values\n",
-    "        ax_tou[-1].scatter(x, y, label = 'Winter')\n",
-    "        ax_tou[-1].set_title('Time: ' + str(i) + ':00 (TOU)')\n",
-    "        ax_tou[-1].set_xlabel(r'Temperature (C$^o$)')\n",
-    "        ax_tou[-1].set_ylabel('Average Consumption (kWh)')\n",
-    "        ax_tou[-1].legend()\n",
-    "plt.tight_layout()"
+    "df_Ntou1h_spr3 = df_Ntou1h[df_month_help['GMT'] == 3]\n",
+    "df_Ntou1h_spr4 = df_Ntou1h[df_month_help['GMT'] == 4]\n",
+    "df_Ntou1h_spr5 = df_Ntou1h[df_month_help['GMT'] == 5]\n",
+    "df_Ntou1h_aut9 = df_Ntou1h[df_month_help['GMT'] == 9]\n",
+    "df_Ntou1h_aut10 = df_Ntou1h[df_month_help['GMT'] == 10]\n",
+    "df_Ntou1h_aut11 = df_Ntou1h[df_month_help['GMT'] == 11]"
    ]
   }
  ],
